fix: tasks export fixed, performance cache updated